# purespace

./: .dir-locals.el  .gitignore  ChangeLog.md  README.md  default.nix  purespace.cabal  release.nix  shell.nix  stack.yaml
assets/Spritesheet/: sheet.json  sheet.xml
client/src/: Main.hs
client/src/PureSpace/: Client.hs
client/src/PureSpace/Client/: Assets.hs  Config.hs  Error.hs  Game.hs  GameConfig.hs  GameError.hs  GameState.hs  GameWindow.hs  Graphics.hs  Matrix.hs  Shader.hs  ShaderProgram.hs  Shaders.hs  Sprites.hs  State.hs
client/src/PureSpace/Client/Assets/: Sprites.hs
client/src/PureSpace/Client/Game/: Config.hs  Error.hs  State.hs
client/src/PureSpace/Client/Graphics/: Assets.hs  Buffer.hs  Device.hs  Error.hs  Maths.hs  Matrix.hs  Memory.hs  Program.hs  Shader.hs  State.hs  Texture.hs  Uniform.hs  Window.hs
client/src/PureSpace/Client/Graphics/Assets/: Error.hs  State.hs
client/src/PureSpace/Client/Graphics/Device/: Input.hs  State.hs
client/src/PureSpace/Client/Graphics/Maths/: Matrix.hs
client/src/PureSpace/Client/Graphics/Memory/: Buffer.hs  Error.hs  Texture.hs
client/src/PureSpace/Client/Graphics/Program/: Error.hs  Shader.hs  State.hs  Uniform.hs
client/src/PureSpace/Client/Graphics/Program/Shader/: Error.hs  State.hs
client/src/PureSpace/Client/Graphics/Shader/: Error.hs  Program.hs  State.hs
client/src/PureSpace/Client/Graphics/Shader/Program/: Error.hs  State.hs  Uniform.hs
client/test/: Spec.hs
common/: .dir-locals.el
common/src/PureSpace/Common/: Concurrent.hs  Files.hs  Free.hs  Lens.hs  Monad.hs  Prelude.hs  Resource.hs
common/src/PureSpace/Common/Game/: Action.hs  Base.hs  Collision.hs  Config.hs  Entity.hs  Error.hs  FSM.hs  Fleet.hs  GameFSM.hs  Geometry.hs  Projectile.hs  Ship.hs  State.hs  Types.hs
common/src/PureSpace/Common/Game/Base/: Types.hs
common/src/PureSpace/Common/Game/Logic/: Loop.hs
common/src/PureSpace/Common/Game/Player/: Error.hs  State.hs
common/src/PureSpace/Common/Game/Projectile/: Damage.hs  Types.hs
common/src/PureSpace/Common/Game/Ship/: Types.hs
common/src/PureSpace/Common/Game/State/: GameState.hs  Player.hs  Types.hs
common/src/PureSpace/Common/Resource/: Error.hs
server/: .dir-locals.el
server/src/: Main.hs
server/test/: Spec.hs
shaders/: sprite.frag  sprite.vert
